# the-conversion-engine

./: .env.example  .gitignore  FULL_PROJECT_GUIDE.md  README.md  ablation_results.json  baseline.md  evidence_graph.json  held_out_traces.jsonl  invoice_summary.json  method.md  pyproject.toml
agent/: __init__.py  composer.py  config.py  events.py  io_utils.py  multichannel_production.py  orchestrator.py  policy.py  requirements.txt  types.py  webhooks.py
agent/enrichment/: __init__.py  pipeline.py
agent/integrations/: __init__.py  calcom.py  email.py  hubspot.py  langfuse.py  sms.py
agent/scripts/: run_latency_batch.py  run_multichannel_production.py  run_single_flow.py
artifacts/interim/: README.md  submission_checklist.md
artifacts/interim/latency_batch/: interaction_trace_log.jsonl  latency_summary.json  latency_summary.md
artifacts/interim/production_multichannel/: cal_booking_snapshot.json  competitor_gap_brief.json  hiring_signal_brief.json  hubspot_snapshot.json
artifacts/interim/single_prospect_flow/: cal_booking_snapshot.json  (+4 more)
eval/: final_eval_metadata.json  generate_final_eval_artifacts.py  run_metadata.json  run_tau2_wrapper.py  score_log.json
infra/: killswitch.md  smoke_test.ps1  smoke_test.sh
probes/: failure_taxonomy.md  probe_library.md  target_failure_mode.md
report/: interim_report.md  interim_submission_pdf_ready.md  memo_final_pdf_ready.md
source_file/: Draft Tenacious Sales Materials Template.docx  Supporting Scenario of The Conversion Engine.docx  TRP1 Challenge Week 10_ Conversion Engine for Sales Automation.docx
