[project]
name = "the-conversion-engine"
version = "0.1.0"
description = "Week 10 conversion engine interim implementation"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.23.0",
  "requests>=2.32.0",
  "fastapi>=0.115.0",
  "playwright>=1.50.0",
]

[tool.setuptools]
packages = ["agent"]
